[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = { version = "0.26.5", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"
js-sys = "0.3"
web-sys = { version = "0.3.22", features = ["BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket"] }
wasm-sockets = "0.2.2"
