[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
websocket = { version = "0.26.5", default-features = false, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"
stdweb = "0.4.20"

[features]
legacy_threaded = []
