[package]
name = "netty"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
        "BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent",
        "WebSocket"
    ] }
lazy_static = "1.4.0"

[features]
legacy_threaded = []
